# Sistemas-Operativos

./: README.md
Proyectos/Proyecto1/Codigo/: README.md
Proyectos/Proyecto1/Codigo/include/: print.h  semaphore.h  shmem.h  structs.h  utilities.h
Proyectos/Proyecto1/Codigo/lib/: Makefile  print.c  semaphore.c  shmem.c  utilities.c
Proyectos/Proyecto1/Codigo/src/: Makefile  consumer.c  finalizer.c  initializer.c  producer.c
Proyectos/Proyecto2/Codigo/: Makefile  install.sh  run.sh
Proyectos/Proyecto2/Codigo/Requirements/: intrucciones.txt
Proyectos/Proyecto2/Codigo/assets/map/: map2.map
Proyectos/Proyecto2/Codigo/config/: centerChannel.conf  eastChannel.conf  generalConfig.conf  westChannel.conf
Proyectos/Proyecto2/Codigo/include/: CEthread.h  data.h  graphics.h  linkedlist.h  util.h
Proyectos/Proyecto2/Codigo/lib/: Makefile
Proyectos/Proyecto2/Codigo/lib/CEthread/: CEthread.c  Makefile
Proyectos/Proyecto2/Codigo/lib/data/: Makefile  data.c
Proyectos/Proyecto2/Codigo/src/: Ants.c  Makefile
Proyectos/Proyecto3/Codigo/ImageClient/: package-lock.json  package.json
Proyectos/Proyecto3/Codigo/ImageServers/ImageServer/: CMakeLists.txt  main.c
Talleres/Taller1/Ejemplo/: fac  fac.c  fac.py
Talleres/Taller2/Codigo/: Taller2.c  hello  hello.c  taller2
Tareas/Tarea1/: README.md
Tareas/Tarea1/Codigo/CServer/: Makefile  config.conf  main  main.c
Tareas/Tarea2/: README.md
Tareas/Tarea2/Codigo/: Makefile
Tareas/Tarea2/Codigo/img/: image2binary.py
Tareas/Tarea2/Codigo/src/: bootloader.asm  buffer.asm  kernel.asm
(+44 files in other folders)
